--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        runner: [ubuntu-latest, macos-latest, windows-latest]
-        go: [ '1.24', '1.25' ]
+        runner: [ubuntu-latest]
+        go: ['1.25', '1.26']
 
     runs-on: ${{matrix.runner}}
     name: OS ${{matrix.runner}} Go ${{matrix.go}}
